# cp-posh

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml
cp_posh/analysis/: aggregate.py  linear_evaluation.py  metrics.py  normalize.py  pipelines.py  plotting.py  similarity.py  stringdb.py  viz.py
cp_posh/registration/: plate_geometry.py  transforms.py
cp_posh/sequencing/: blob_log_base_caller.py  fcn_base_caller.py  sequence_barcodes.py  train_fcn.py
cp_posh/sequencing/baselines/: bardensr.py  starfish.py  utils.py
cp_posh/ssl/: inference.py  utils.py
cp_posh/ssl/backbone/: __init__.py  vision_transformer.py
cp_posh/ssl/config/: main_dino.yaml
cp_posh/ssl/config/data/: cp_posh_1640.yaml  cp_posh_1640_with_pS6.yaml  cp_posh_300.yaml
cp_posh/ssl/config/meta_arch/: dino.yaml
cp_posh/ssl/config/meta_arch/backbone/: vit_small.yaml
cp_posh/ssl/config/transformations/: cp_posh_1642.yaml  cp_posh_1642_with_pS6.yaml  cp_posh_300.yaml
cp_posh/ssl/data/: __init__.py  cp_posh.py  s3dataset.py
cp_posh/ssl/main/: main_dino.py
cp_posh/ssl/meta_arch/: dino.py
cp_posh/ssl/transformations/: __init__.py  transformations.py
cp_posh/utils/: data.py  scaling.py
notebooks/: 2_analysis_morphology_124.ipynb  3_analysis_cpdino_300.ipynb  4_analysis_cpdino_1640.ipynb  5_analysis_cpdino_1640pS6.ipynb
scripts/inference/: cpposh_124_inference.sh  cpposh_1640_inference.sh  cpposh_300_inference.sh
scripts/training/: cpdino_1640_fp32_100ep.sh  cpdino_1640_with_pS6_fp32_100ep.sh  cpdino_300_fp32_100ep.sh
