[project]
authors = [{name = "Srinivasan Sivanandan", email = "srinivasan@insitro.com"}, {name = "Max Salick", email = "max@insitro.com"}]
dependencies = [ "igraph==0.11.6", "opencv-python==4.10.0", "cellpose==0.6.5", "matplotlib-venn==1.1.1"]
description = "CP-POSH: A Pooled Cell Painting CRISPR Screening Platform Enables de novo Inference of Gene Function by Self-supervised Deep Learning"
name = "cp-posh"
requires-python = ">= 3.11"
version = "1.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cp_posh = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = ">=1.26.4,<2"
seaborn = "==0.13.0"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.9.2,<4"
pyarrow = "==14.0.2"
scipy = "==1.11.4"
scikit-learn = "==1.3.2"
scikit-image = "==0.25.0"
umap-learn = "==0.5.5"
adjusttext = "==1.0.4"
statsmodels = "==0.14.1"
certifi = "==2023.11.17"
leidenalg = "==0.10.2"
tifffile = ">=2024.9.20,<2025"
plotly = "==5.24.1"
imreg_dft = "==2.0.0"
albumentations = "==1.4.15"
omegaconf = "==2.3.0"
boto3 = "==1.35.23"
botocore = "==1.35.23"
pytorch-lightning = ">=2.4.0,<3"
retrying = "==1.3.3"
hydra-core = "==1.3.2"
ruff = "==0.4.5"
mypy = "==1.6.1"
pre-commit = "==3.8.0"
albucore = "==0.0.16"
decorator = "==5.1.1"
pytorch = ">=2.4.1,<3"
jupyterlab = ">=4.2.5,<5"
bash_kernel = ">=0.9.3,<0.10"
ipywidgets = ">=8.1.5,<9"
torchvision = ">=0.19.1,<0.20"
huggingface_hub = ">=0.35.3,<0.36"
safetensors = ">=0.6.2,<0.7"
transformers = ">=4.57.1,<5"

[pypi-dependencies]
starfish = "==0.3.3"

# This is to prevent the following error https://github.com/prefix-dev/pixi/issues/346#issuecomment-2094906047
[tool.pixi.system-requirements]
libc = { family="glibc", version="2.26" }
